--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 dill
-joblib
-
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.6.1
@@ -8,3 +6,5 @@ xgboost==2.0.3
 fastapi
 uvicorn
 joblib
+requests
+pickle
